--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "modtcp-client",
   "version": "1.0.0",
+  "repository": "https://github.com/yurishag/ModbusTCP",
   "description": "Modbus TCP client for NodeJS",
   "main": "index.js",
   "scripts": {
