--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "modtcp-client",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "repository": "https://github.com/yurishag/ModbusTCP",
   "description": "Modbus TCP client for NodeJS",
   "main": "index.js",
   "scripts": {
     "main": "dist/index.js",
-    "types": "dist/index.d.ts"
+    "types": "dist/index.d.ts",
+    "compile": "tsc"
   },
   "keywords": [
     "Modtcp",
