--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "modtcp-client",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "repository": "https://github.com/yurishag/ModbusTCP",
   "description": "Modbus TCP client for NodeJS",
   "main": "index.js",
   "scripts": {
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
-    "compile": "tsc"
+    "compile": "tsc",
+    "build": "tsc"
   },
   "keywords": [
     "Modtcp",
